CC-30070 Fixed table actions alignment.

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/status/status.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/status/status.scss
@@ -1,5 +1,6 @@
 @include shop-ui-status() {
     border-radius: rem(4);
+    margin: rem(2) rem(2) rem(2) 0;
 
     &--in-progress,
     &--refunded {
